tests/test_assets/semantic/valid/arrays/returns.cog
return_array_ok::() -> i32[3] {
    return [1, 2, 3];
}