tests/test_assets/semantic/invalid/strings/return_element_type.cog
// semantic error at line 2: string literal destination must be u8 array
// 1 semantic error generated.

test::() -> i32[6] {
    return "hello";
}